# sir-server

./: .env  .gitignore  .gitmodules  compose.yaml  pyproject.toml  services.yaml
.claude/skills/: ai-tools.md  aidev.md  deploy-ipu.md  deploy-sir.md  dev-scripts.md  docker-compose.md  lanta-job.md  research.md  ssh.md  tauri.md  tl.md  uv.md
gateway/cloudflared/: 0e7d6897-071b-47a2-9473-65713a338536.json  compose.yaml  config.yaml
gateway/nginx/: compose.yaml  fallback.html
gateway/watcher/: Dockerfile  README.md  compose.yaml  go.mod  main.go
test/: compose.basic.yaml  compose.custom-host.yaml  compose.custom-port.yaml  compose.duplicate-host.yaml  compose.httpbin.yaml  compose.multi.yaml  compose.no-proxy.yaml  compose.portainer.yaml  compose.whoami.yaml  compose.yaml
watcher/: Dockerfile  pyproject.toml
watcher/src/watcher/: main.py
