[project]
name = "watcher"
version = "0.1.0"
description = "Docker event watcher for nginx auto-discovery"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watcher"]
